Fix some expectations